--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             </div>
 
             <p class="footer__copy">
-                &#169; کلیه‌ی حقوق نزد وب پروگ محفوظ است.
+                &#169; کلیه‌ی حقوق نزد طراح محفوظ است.
             </p>
         </footer>
 
